[gd_scene load_steps=6 format=3 uid="uid://b4ae2qj406or6"]

[ext_resource type="Script" path="res://AI/Mob.gd" id="1_hbaqi"]
[ext_resource type="Texture2D" uid="uid://cm5vii4gj70i1" path="res://AI/enemy_hawk.png" id="2_nxohl"]
[ext_resource type="Texture2D" uid="uid://bot84i678ijb8" path="res://common/2d_light_texture.webp" id="3_udwpd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsw57"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_lwmer"]
radius = 500.0

[node name="Mob" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_hbaqi")
drag_factor = 0.1
vision_range = 600.0

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
texture = ExtResource("2_nxohl")

[node name="MobCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nsw57")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="HearingDetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_lwmer")

[node name="ConeOfVision" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
energy = 3.0
shadow_enabled = true
texture = ExtResource("3_udwpd")
texture_scale = 5.0
